Add documentation for GStreamer specific API of GUPnP-DLNA.

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,21 @@ doc/gupnp-dlna-metadata/gupnp-dlna-metadata.signals
 doc/gupnp-dlna-metadata/gupnp-dlna-metadata.types
 doc/gupnp-dlna-metadata/html/
 doc/gupnp-dlna-metadata/xml/
+doc/gupnp-dlna-gst/gupnp-dlna-gst-decl-list.txt
+doc/gupnp-dlna-gst/gupnp-dlna-gst-decl.txt
+doc/gupnp-dlna-gst/gupnp-dlna-gst-overrides.txt
+doc/gupnp-dlna-gst/gupnp-dlna-gst-sections.txt
+doc/gupnp-dlna-gst/gupnp-dlna-gst-undeclared.txt
+doc/gupnp-dlna-gst/gupnp-dlna-gst-undocumented.txt
+doc/gupnp-dlna-gst/gupnp-dlna-gst-unused.txt
+doc/gupnp-dlna-gst/gupnp-dlna-gst.args
+doc/gupnp-dlna-gst/gupnp-dlna-gst.hierarchy
+doc/gupnp-dlna-gst/gupnp-dlna-gst.interfaces
+doc/gupnp-dlna-gst/gupnp-dlna-gst.prerequisites
+doc/gupnp-dlna-gst/gupnp-dlna-gst.signals
+doc/gupnp-dlna-gst/gupnp-dlna-gst.types
+doc/gupnp-dlna-gst/html/
+doc/gupnp-dlna-gst/xml/
 m4/gtk-doc.m4
 m4/libtool.m4
 m4/ltoptions.m4
