--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,3 +1,10 @@
-SUBDIRS = gupnp-dlna gupnp-dlna-metadata .
+DIST_SUBDIRS = gupnp-dlna gupnp-dlna-metadata gupnp-dlna-gst .
+SUBDIRS = gupnp-dlna gupnp-dlna-metadata
+
+if GSTREAMER_METADATA_BACKEND_ENABLED
+SUBDIRS += gupnp-dlna-gst
+endif
+
+SUBDIRS += .
 
 EXTRA_DIST = version.xml.in
