--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -13,6 +13,7 @@ sets_CFLAGS = \
 	$(GOBJECT_CFLAGS) \
 	$(LIBXML_CFLAGS) \
 	$(GMODULE_CFLAGS) \
+	-I$(top_srcdir) \
 	-I$(top_srcdir)/libgupnp-dlna \
 	-I$(top_srcdir)/libgupnp-dlna/profile-backends/native \
 	-I$(top_srcdir)/libgupnp-dlna/profile-backends/native/sets
