--- a/vala/Makefile.am
+++ b/vala/Makefile.am
@@ -36,6 +36,9 @@ gupnp-dlna-gst-2.0.stamp: $(builddir)/../libgupnp-dlna/GUPnPDLNAGst-2.0.gir \
 			      --library=gupnp-dlna-gst-2.0 \
 			      --vapidir=$(builddir) \
 			      --girdir=$(builddir)/../libgupnp-dlna \
+			      --pkg gupnp-dlna-2.0 \
+			      --pkg gstreamer-1.0 \
+			      --pkg gstreamer-pbutils-1.0 \
 			      $(builddir)/../libgupnp-dlna/GUPnPDLNAGst-2.0.gir \
 			      $(srcdir)/gupnp-dlna-gst-2.0-custom.vala && \
 	echo timestamp > $(@F)
