Fix gupnp-dlna-gst-legacy pkg-config file.

--- a/gupnp-dlna-gst-legacy-2.0.pc.in
+++ b/gupnp-dlna-gst-legacy-2.0.pc.in
@@ -7,4 +7,4 @@ Name: gupnp-dlna-gst-2.0
 Description: GStreamer specific utils using GUPnP-DLNA
 Version: @VERSION@
 Libs: -L${libdir} -lgupnp-dlna-gst-2.0
-Requires: glib-2.0 gobject-2.0 gupnp-dlna-2.0 gstreamer-@GST_MAJORMINOR_LEGACY@ gstreamer-pbutils-@GST_MAJORMINOR_LEGACY@
+Requires: glib-2.0 gobject-2.0 gupnp-dlna-2.0 gstreamer-@GST_LEGACY_MAJORMINOR@ gstreamer-pbutils-@GST_LEGACY_MAJORMINOR@
