--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,7 @@ gupnp-dlna-2.0.pc
 gupnp-dlna-metadata-2.0.pc
 gupnp-dlna-gst-2.0.pc
 gupnp-dlna-2.0-uninstalled.pc
+gupnp-dlna-gst-legacy-2.0.pc
 gupnp-dlna-*.tar.xz
 install-sh
 libgupnp-dlna/gupnp-dlna-marshal.c
