--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,9 +1,10 @@
-TESTS_ENVIRONMENT = \
-	G_SLICE=debug-blocks \
+AM_TESTS_ENVIRONMENT = \
+	export G_SLICE=debug-blocks \
 	LD_LIBRARY_PATH=$(top_builddir)/libgupnp-dlna/.libs:$(LD_LIBRARY_PATH) \
-	MEDIA_DIR="$(srcdir)/media" FILE_LIST="$(srcdir)/media/media-list.txt" ${SHELL}
+	MEDIA_DIR="$(srcdir)/media" FILE_LIST="$(srcdir)/media/media-list.txt";
 TESTS = $(check_PROGRAMS) test-discoverer.sh
 
+check_SCRIPTS = test-discoverer.sh
 check_PROGRAMS = sets
 
 sets_SOURCES = \
