Setup environment for discoverer tests
Signed-off-by: Jens Georg <mail@jensge.org>

https://bugzilla.gnome.org/show_bug.cgi?id=751634

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,9 @@
 AM_TESTS_ENVIRONMENT = \
 	export G_SLICE=debug-blocks \
 	LD_LIBRARY_PATH=$(top_builddir)/libgupnp-dlna/.libs:$(LD_LIBRARY_PATH) \
-	MEDIA_DIR="$(srcdir)/media" FILE_LIST="$(srcdir)/media/media-list.txt";
+	MEDIA_DIR="$(srcdir)/media" FILE_LIST="$(srcdir)/media/media-list.txt" \
+	GUPNP_DLNA_PROFILE_DIR=$(abs_top_srcdir)/data \
+	GUPNP_DLNA_METADATA_BACKEND_DIR=$(top_builddir)/libgupnp-dlna/metadata-backends/gstreamer/.libs;
 TESTS = $(check_PROGRAMS) test-discoverer.sh
 
 check_SCRIPTS = test-discoverer.sh
