--- a/doc/gupnp-dlna-gst/Makefile.am
+++ b/doc/gupnp-dlna-gst/Makefile.am
@@ -88,4 +88,5 @@ include $(top_srcdir)/gtk-doc.make
 
 # Other files to distribute
 # e.g. EXTRA_DIST += version.xml.in
+EXTRA_DIST = meson.build
 DISTCLEANFILES = version.xml
