ci: Add missing plugins

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,13 +61,13 @@ check-merge-request:
 
 .gupnpdlna.fedora@common:
   variables:
-    BASE_TAG: '2021-05-27.0'
+    BASE_TAG: '2021-05-27.1'
     FDO_UPSTREAM_REPO: GNOME/gupnp-dlna
     FDO_DISTRIBUTION_PACKAGES: 'clang clang-analyzer gcovr git libasan libubsan python3-gobject python3-pip xmlto gobject-introspection-devel gtk-doc libxml2-devel vala ninja-build gstreamer1-devel gstreamer1-plugins-base-devel'
     FDO_DISTRIBUTION_EXEC: |
       dnf clean all &&
       dnf -y install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-34.noarch.rpm https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-34.noarch.rpm &&
-      dnf -y install gstreamer1-plugins-ugly-free gstreamer1-plugins-bad-free gstreamer1-libav gstreamer1-plugins-bad-freeworld gstreamer1-plugins-ugly &&
+      dnf -y install gstreamer1-plugins-good gstreamer1-plugins-ugly-free gstreamer1-plugin-openh264 gstreamer1-plugins-bad-free gstreamer1-libav gstreamer1-plugins-bad-freeworld gstreamer1-plugins-ugly &&
       pip3 install meson
 
 .gupnpdlna.fedora:34@x86_64:
